--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
   "author": "naveendk",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-validator": "^5.3.1",
     "mongoose": "^5.11.13",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "uuidv1": "^1.6.14"
   }
 }
