signup and signin authentication

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 MONGO_URI=mongodb+srv://naveendkdb:Naveendkdb123@cluster0.iwwjd.mongodb.net/<dbname>?retryWrites=true&w=majority
+
+JWT_SECRET=asdfsdfhasduifyhapsod
